add solution to largest prime factor problem

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     <ol>
         <li><a href="multiplesOf3and5.js">Find Multiples of 3 and 5</a></li>
         <li><a href="evenFibonacciNumbers.js">Find Sum of Even Fibonacci Sequence</a></li>
+        <li><a href="largestPrimeFactor.js">Find the Largest Prime Factor of a Given Number</a></li>
     </ol>
     <script>
-
-
     </script>
     </body>
 </html>
