--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     </ol>
     <script>
     </script>
-    <script src="smallestMultiple.js"></script>
+    <script src="palindromeProduct.js"></script>
     </body>
 </html>
