--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li><a href="multiplesOf3and5.js">Find Multiples of 3 and 5</a></li>
         <li><a href="evenFibonacciNumbers.js">Find Sum of Even Fibonacci Sequence</a></li>
         <li><a href="largestPrimeFactor.js">Find the Largest Prime Factor of a Given Number</a></li>
-        <li><a href="#">Problem 4</a></li>
+        <li><a href="palindromeProduct.js">Find the largest palindrome made from the product of two n-digit numbers.</a></li>
         <li><a href="smallestMultiple.js">What is the smallest positive number that is evenly divisible by all of the numbers from 1 to n?</a></li>
     </ol>
     <script>
