complete problem 7 and add to index

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         <li><a href="largestPrimeFactor.js">Find the Largest Prime Factor of a Given Number</a></li>
         <li><a href="palindromeProduct.js">Find the largest palindrome made from the product of two n-digit numbers.</a></li>
         <li><a href="smallestMultiple.js">What is the smallest positive number that is evenly divisible by all of the numbers from 1 to n?</a></li>
+        <li><a href="sumSquareDifference.js">Find the difference between the sum of the squares of the first n natural numbers and the square of the sum.</a></li>
     </ol>
     <script>
     </script>
-    <script src="palindromeProduct.js"></script>
+    <script src="sumSquareDifference.js"></script>
     </body>
 </html>
