--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     </ol>
     <script>
     </script>
-    <script src="sumSquareDifference.js"></script>
+    <script src="10001stPrime.js"></script>
     </body>
 </html>
