add prob 6 to index

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="palindromeProduct.js">Find the largest palindrome made from the product of two n-digit numbers.</a></li>
         <li><a href="smallestMultiple.js">What is the smallest positive number that is evenly divisible by all of the numbers from 1 to n?</a></li>
         <li><a href="sumSquareDifference.js">Find the difference between the sum of the squares of the first n natural numbers and the square of the sum.</a></li>
+        <li><a href="10001stPrime.js">What is the nth prime number?</a></li>
     </ol>
     <script>
     </script>
