--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 <body>
     <h1>Project Euler Problems</h1>
     <ol>
-        <li><a href="multiplesOf3and5.js">Find Multiples of 3 and 5</a></li>
-        <li><a href="evenFibonacciNumbers.js">Find Sum of Even Fibonacci Sequence</a></li>
-        <li><a href="largestPrimeFactor.js">Find the Largest Prime Factor of a Given Number</a></li>
-        <li><a href="palindromeProduct.js">Find the largest palindrome made from the product of two n-digit numbers.</a></li>
-        <li><a href="smallestMultiple.js">What is the smallest positive number that is evenly divisible by all of the numbers from 1 to n?</a></li>
-        <li><a href="sumSquareDifference.js">Find the difference between the sum of the squares of the first n natural numbers and the square of the sum.</a></li>
-        <li><a href="10001stPrime.js">What is the nth prime number?</a></li>
+        <li><a href="problem1.js">Find Multiples of 3 and 5</a></li>
+        <li><a href="problem2.js">Find Sum of Even Fibonacci Sequence</a></li>
+        <li><a href="problem3.js">Find the Largest Prime Factor of a Given Number</a></li>
+        <li><a href="problem4.js">Find the largest palindrome made from the product of two n-digit numbers.</a></li>
+        <li><a href="problem5.js">What is the smallest positive number that is evenly divisible by all of the numbers from 1 to n?</a></li>
+        <li><a href="problem6.js">Find the difference between the sum of the squares of the first n natural numbers and the square of the sum.</a></li>
+        <li><a href="problem7.js">***** need to correct ***What is the nth prime number?</a></li>
+        <li><a href="problem8.js">What is the nth prime number?</a></li>
     </ol>
     <script>
     </script>
-    <script src="10001stPrime.js"></script>
+    <script src="problem8.js"></script>
     </body>
 </html>
