fix error in problem 7 and refactor

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <li><a href="problem4.js">Find the largest palindrome made from the product of two n-digit numbers.</a></li>
         <li><a href="problem5.js">What is the smallest positive number that is evenly divisible by all of the numbers from 1 to n?</a></li>
         <li><a href="problem6.js">Find the difference between the sum of the squares of the first n natural numbers and the square of the sum.</a></li>
-        <li><a href="problem7.js">***** need to correct ***What is the nth prime number?</a></li>
-        <li><a href="problem8.js">What is the nth prime number?</a></li>
+        <li><a href="problem7.js">What is the nth prime number?</a></li>
+        <li><a href="problem8.js">What is the largest product in a series?</a></li>
     </ol>
     <script>
     </script>
-    <script src="problem8.js"></script>
+    <script src="problem7.js"></script>
     </body>
 </html>
