solve problem 10 and add to index

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
         <li><a href="problem6.js">Find the difference between the sum of the squares of the first n natural numbers and the square of the sum.</a></li>
         <li><a href="problem7.js">What is the nth prime number?</a></li>
         <li><a href="problem8.js">What is the largest product in a series?</a></li>
+        <li><a href="problem9.js">problem 9</li>
+        <li><a href="problem10.js">Find the sum of all the primes below n.</a></li>
     </ol>
     <script>
     </script>
-    <script src="problem7.js"></script>
+    <script src="problem10.js"></script>
     </body>
 </html>
