--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
         <li><a href="problem8.js">What is the largest product in a series?</a></li>
         <li><a href="problem9.js">problem 9</li>
         <li><a href="problem10.js">Find the sum of all the primes below n.</a></li>
+        <li><a href="problem11.js">What is the greatest product of four adjacent numbers in the same direction (up, down, left, right, or diagonally) in a given arr grid?</a></li>
+
     </ol>
     <script>
     </script>
-    <script src="problem11.js"></script>
+    <script src="problem13.js"></script>
     </body>
 </html>
