add new section of challenges and solve symmetric difference problem

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </style>
 </head>
 <body>
-    <h1>Project Euler Problems</h1>
+    <h2>Project Euler Problems</h2>
     <ol>
         <li><a href="problem1.js">Find Multiples of 3 and 5</a></li>
         <li><a href="problem2.js">Find Sum of Even Fibonacci Sequence</a></li>
@@ -21,10 +21,18 @@
         <li><a href="problem9.js">problem 9</li>
         <li><a href="problem10.js">Find the sum of all the primes below n.</a></li>
         <li><a href="problem11.js">What is the greatest product of four adjacent numbers in the same direction (up, down, left, right, or diagonally) in a given arr grid?</a></li>
+        <li><a href="problem12.js">problem 12</li>
+        <li><a href="problem13.js">Work out the first ten digits of the sum of the following numbers.</li>
 
     </ol>
+    <h2>Free Code Camp Algorithm Challenges</h2>
+    <ol>
+        <li><a href="symmetricDifference.js">Find the Symmetric Difference between Arrays</a></li>
+
+    </ol>
+
     <script>
     </script>
-    <script src="problem13.js"></script>
+    <script src="symmetricDifference.js"></script>
     </body>
 </html>
