--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
     <h2>Free Code Camp Algorithm Challenges</h2>
     <ol>
         <li><a href="symmetricDifference.js">Find the Symmetric Difference between Arrays</a></li>
+        <li><a href="inventoryUpdate.js">Compare and update the inventory stored in a 2D array against a second 2D array of a fresh delivery.</a></li>
 
     </ol>
 
     <script>
     </script>
-    <script src="symmetricDifference.js"></script>
+    <script src="inventoryUpdate.js"></script>
     </body>
 </html>
