--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
     <ol>
         <li><a href="symmetricDifference.js">Find the Symmetric Difference between Arrays</a></li>
         <li><a href="inventoryUpdate.js">Compare and update the inventory stored in a 2D array against a second 2D array of a fresh delivery.</a></li>
+        <li><a href="bubbleSort.js">Implement bubble sort.</a></li>
 
     </ol>
 
     <script>
     </script>
-    <script src="inventoryUpdate.js"></script>
+    <script src="bubbleSort.js"></script>
     </body>
 </html>
