add project euler prob 14

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li><a href="problem11.js">What is the greatest product of four adjacent numbers in the same direction (up, down, left, right, or diagonally) in a given arr grid?</a></li>
         <li><a href="problem12.js">problem 12</li>
         <li><a href="problem13.js">Work out the first ten digits of the sum of the following numbers.</li>
+        <li><a href="problem14.js">Longest Collatz sequence</li>
 
     </ol>
     <h2>Free Code Camp Algorithm Challenges</h2>
@@ -30,11 +31,13 @@
         <li><a href="symmetricDifference.js">Find the Symmetric Difference between Arrays</a></li>
         <li><a href="inventoryUpdate.js">Compare and update the inventory stored in a 2D array against a second 2D array of a fresh delivery.</a></li>
         <li><a href="bubbleSort.js">Implement bubble sort.</a></li>
+        <li><a href="selectionSort.js">Implement selection sort.</a></li>
+
 
     </ol>
 
     <script>
     </script>
-    <script src="bubbleSort.js"></script>
+    <script src="selectionSort.js"></script>
     </body>
 </html>
